# client-sdk

./: CLAUDE.md  Cargo.toml  Makefile  README.md
src/: chain.rs  dashboard.rs  deadline.rs  error.rs  lib.rs  sdk.rs  types.rs  uniffi.rs  wasm.rs
tests/: dashboard_tests.rs  deadline_tests.rs  error_tests.rs  lifecycle_tests.rs  sdk_tests.rs
tests/common/: mod.rs
uniffi/: opticrum_sdk.udl
